排课编辑，新增班级冲突计算

--- a/schedule/src/app/schedule/edit/edit.component.html
+++ b/schedule/src/app/schedule/edit/edit.component.html
@@ -5,6 +5,30 @@
     <input type="text" class="disabled" disabled [value]="course.name">
   </div>
 </div>
+<div class="form-group row mb-0" *ngFor="let clazz of this.schedule.clazzes; index as x">
+  <label class="col-sm-2 text-right col-form-label" style="width: 162px"><code>*</code>班级{{ x + 1 }}</label>
+  <div class="col-sm">
+    <input type="text" class="disabled" disabled [value]="clazz.name"><button type="button" class="btn btn-danger btn-sm ml-1">删除</button>
+  </div>
+</div>
+<div class="form-group row" *ngIf="!this.isShowAddClazzes">
+  <label class="col-sm-2 text-right col-form-label" style="width: 162px"></label>
+  <div class="col-sm">
+    <button type="button" class="btn btn-success" (click)="this.isShowAddClazzes = !this.isShowAddClazzes">新增上课班级</button>
+  </div>
+</div>
+<!-- 添加班级 -->
+<div class="form-group row" *ngIf="this.isShowAddClazzes">
+  <label class="col-sm-2 text-right col-form-label"><code>*</code>上课班级<br>(可多选)</label>
+  <div class="col-sm">
+    <select class="select picker form-control col-sm-3" style="width: 200px" multiple>
+      <option [value]="null">请选择班级</option>
+      <option *ngFor="let clazz of this.thirdFilerClazzes" [value]="+clazz.id">{{clazz.name}}</option>
+    </select>
+    <button type="button" class="btn btn-success mt-1" (click)="this.isShowAddClazzes = !this.isShowAddClazzes">取消</button>
+    <button type="button" class="btn btn-success mt-1">保存新增班级</button>
+  </div>
+</div>
 <!--选择时间-->
 <div class="form-group row">
   <div class="col-sm-2">
@@ -23,8 +47,6 @@
       <span class="font-weight-bold">课程学时:&nbsp;&nbsp;{{ course?.hours}}</span>
     </div>
   </div>
-
-
   <div class="col-sm" style="float: right">
     <table class="table  table-bordered">
       <thead>
@@ -45,14 +67,12 @@
       </tbody>
     </table>
   </div>
-
   <div class="row col-sm-12">
     <div class="col">
       <button type="submit" (click)="onSubmit()" [disabled]="!canSubmit()" class="btn btn-primary">确定</button>
     </div>
   </div>
 </div>
-
 <app-yz-modal *ngIf="isShowModel" [width]="'65%'" [size]="'md'">
   <div class="">
     <div class="modal-dialog modal-xl">
@@ -89,7 +109,6 @@
                       class="mr-1 border-white yzRound" style="font-size: 0.8em">第{{ w! + 1 }}周</button>
             </ng-container>
           </ul><br>
-
           <div *ngIf="week !== undefined || !pattern">
             <h6>选择教室<span class="text-muted" *ngIf="pattern" style="font-size: 0.7em">(周:{{week! + 1}})</span>:</h6>
             <ul class="list-group list-group-horizontal">
@@ -100,12 +119,12 @@
               </ng-container>
             </ul>
           </div>
-<!--          selectedWeeks{{selectedWeeks | json}}<br>-->
-<!--          selectedRooms{{selectedRooms | json}}<br>-->
-<!--          disabledWeeks{{disabledWeeks | json}}<br>-->
-<!--          disabledRooms{{disabledRooms | json}}<br>-->
-<!--          tempData{{tempData| json}}<br>-->
-<!--          smLessons{{smLessons | json}}-->
+          <!--          selectedWeeks{{selectedWeeks | json}}<br>-->
+          <!--          selectedRooms{{selectedRooms | json}}<br>-->
+          <!--          disabledWeeks{{disabledWeeks | json}}<br>-->
+          <!--          disabledRooms{{disabledRooms | json}}<br>-->
+          <!--          tempData{{tempData| json}}<br>-->
+          <!--          smLessons{{smLessons | json}}-->
           <br><br>
         </div>
         <div class="modal-footer">
