修改密码， 修改标题

--- a/schedule/src/app/personal/personal.component.html
+++ b/schedule/src/app/personal/personal.component.html
@@ -1,6 +1,7 @@
 <div class="row">
-  <div class="col-md-3">
-    <a class="btn btn-primary" [routerLink]="'edit'"><i class="fas fa-edit"></i>修改个人信息</a>
+  <div class="col-md-4">
+    <a class="btn btn-primary btn-sm" [routerLink]="'edit'"><i class="fas fa-edit"></i>修改个人信息</a>
+    <a class="btn btn-primary btn-sm" [routerLink]="'modifyPassword'"><i class="fas fa-edit"></i>修改密码</a>
   </div>
 </div>
 <div class="row">
