--- a/schedule/src/app/personal/edit/edit.component.html
+++ b/schedule/src/app/personal/edit/edit.component.html
@@ -5,16 +5,16 @@
       <input type="text" class="form-control col-sm-3" formControlName="name">
     </div>
   </div>
-  <div class="form-group row">
-    <label class="col-sm-4 text-right col-form-label"><code>*</code>手机号</label>
-    <div class="col-sm-8">
-      <input type="text" class="form-control col-sm-3" formControlName="phone">
-      <small class="text-danger" *ngIf="formGroup.get('phone')!.touched && formGroup.get('phone')!.invalid ">
-        <span *ngIf="!formGroup.get('phone')?.errors?.phoneUnique">格式不正确</span>
-        <span *ngIf="formGroup.get('phone')?.errors?.phoneUnique">手机号已存在</span>
-      </small>
-    </div>
-  </div>
+<!--  <div class="form-group row">-->
+<!--    <label class="col-sm-4 text-right col-form-label"><code>*</code>手机号</label>-->
+<!--    <div class="col-sm-8">-->
+<!--      <input type="text" class="form-control col-sm-3" formControlName="phone">-->
+<!--      <small class="text-danger" *ngIf="formGroup.get('phone')!.touched && formGroup.get('phone')!.invalid ">-->
+<!--        <span *ngIf="!formGroup.get('phone')?.errors?.phoneUnique">格式不正确</span>-->
+<!--        <span *ngIf="formGroup.get('phone')?.errors?.phoneUnique">手机号已存在</span>-->
+<!--      </small>-->
+<!--    </div>-->
+<!--  </div>-->
   <div class="form-group row">
     <div class="offset-5">
       <a style="float: right" [routerLink]="'../'" class="btn btn-primary">返回</a>
