--- a/schedule/src/app/room/edit/edit.component.html
+++ b/schedule/src/app/room/edit/edit.component.html
@@ -12,7 +12,7 @@
   <div class="form-group row">
     <label class="col-sm-4 text-right col-form-label"><code>*</code>容量</label>
     <div class="col-sm-8">
-      <input type="text" class="form-control col-sm-3" formControlName="capacity" appValidatorClass>
+      <input type="number" class="form-control col-sm-3" formControlName="capacity">
     </div>
   </div>
   <div class="form-group row">
