--- a/schedule/src/app/schedule/add/add.component.html
+++ b/schedule/src/app/schedule/add/add.component.html
@@ -55,9 +55,7 @@
 
   <!--选择时间-->
   <div *ngIf="isShowTimeSelect()" class="form-group row">
-    <div class="col-sm-2">
-      <label class="col-sm-12 col-form-label"><code>*</code>上课时间:</label>
-    </div>
+    <label class="col-sm-2 text-right col-form-label"><code>*</code>上课时间:</label>
     <div class="col-sm-10">
       <div class="dropdown">
         <button class="btn btn-sm btn-outline-info dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
@@ -73,7 +71,8 @@
     </div>
 
 
-    <div class="col-sm" style="float: right">
+    <label class="col-sm-2 mt-3"></label>
+    <div class="col-sm mt-3">
       <table class="table  table-bordered">
         <thead>
           <tr>
@@ -95,7 +94,7 @@
     </div>
 
     <div class="row col-sm-12">
-      <div class="col">
+      <div class="col text-right">
         <button type="submit" (click)="onSubmit()" [disabled]="!canSubmit()" class="btn btn-primary">确定</button>
       </div>
     </div>
