--- a/schedule/src/app/schedule/table/table.component.html
+++ b/schedule/src/app/schedule/table/table.component.html
@@ -7,19 +7,18 @@
 </div>
 <!--选择时间-->
 <div class="form-group row">
-  <div class="col-sm-2">
-    <label class="col-sm-12 col-form-label"><code>*</code>上课时间:</label>
-  </div>
+  <label class="col-sm-2 text-right col-form-label"><code>*</code>上课时间</label>
   <div class="col-sm-10">
     <div class="dropdown">
       <span class="font-weight-bold mr-5">{{ pattern ? '定制模式' : '同步模式' }}</span>
-      <span class="font-weight-bold mr-5">当前周:&nbsp;{{ overtimeWeekNumber! + 1 }}</span>
+      <span *ngIf="overtimeWeekNumber !== undefined" class="font-weight-bold mr-5">当前周:&nbsp;{{ overtimeWeekNumber! + 1 }}</span>
       <span class="font-weight-bold">课程学时:&nbsp;&nbsp;{{ course?.hours}}</span>
     </div>
   </div>
 
 
-  <div class="col-sm" style="float: right">
+  <label class="col-sm-2 mt-3"></label>
+  <div class="col-sm mt-3">
     <table class="table  table-bordered">
       <thead>
       <tr>
