--- a/schedule/src/app/schedule/edit/edit-clazzes-and-teachers/edit-clazzes-and-teachers.component.html
+++ b/schedule/src/app/schedule/edit/edit-clazzes-and-teachers/edit-clazzes-and-teachers.component.html
@@ -1,7 +1,4 @@
 <form [formGroup]="formGroup" (ngSubmit)="onSubmit(formGroup)">
-  {{ this.formGroup.get('teacher1Id')?.value }}
-  {{ this.formGroup.get('teacher2Id')?.value }}
-  {{ this.formGroup.get('clazzIds')?.value }}
   <div class="form-group row mb-0" *ngFor="let clazz of this.schedule.clazzes; index as x">
     <label class="col-sm-2 text-right col-form-label" style="width: 162px"><code>*</code>班级{{ x + 1 }}</label>
     <div class="col-sm">
@@ -19,9 +16,6 @@
     </div>
   </div>
   <div class="form-group row">
-<!--    {{ this.formGroup.get('teacher1Id')?.value }}-->
-<!--    {{ this.formGroup.get('teacher2Id')?.value }}-->
-<!--    {{ this.isTeacherSame }}-->
     <label class="col-sm-2 text-right col-form-label" style="width: 162px"><code>*</code>教师</label>
     <div class="col-sm-2">
       <select class="select picker form-control col-sm-12" style="width: 200px" formControlName="teacher1Id" id="teacher1Id" required>
@@ -36,7 +30,7 @@
       </select>
     </div>
     <div class="offset-2 col-sm-12">
-      <small class="text-danger" *ngIf="formGroup.get('teacher1Id')!.touched && formGroup.get('teacher2Id')!.touched && isTeacherSame">
+      <small class="text-danger" *ngIf="isTeacherSame">
         <span>两个教师不能相同</span>
       </small>
     </div>
