--- a/schedule/src/app/schedule/schedule.component.html
+++ b/schedule/src/app/schedule/schedule.component.html
@@ -14,7 +14,8 @@
   </div>
 </div>
 <hr/>
-<app-size [size]="pageData.size" (changeSize)="onSizeChange($event)"></app-size><br>
+<app-size [size]="pageData.size" (changeSize)="onSizeChange($event)"></app-size>
+<span class="ml-5 font-weight-bold">当前学期:&nbsp;&nbsp;{{ term?.name}}</span><br>
 <table class="table table-striped mt-3">
   <thead class="table-primary">
     <tr class="info">
@@ -35,7 +36,8 @@
       <td>{{schedule.teacher1.name + '、' + schedule.teacher2.name}}</td>
       <td>
         <a class="btn btn-sm btn-info" [routerLink]="'timetable/' + schedule.id"><i class="fas  fa-info-circle"></i>查看课表</a>
-        <button class="btn btn-sm btn-primary" [disabled]="schedule.term.id !== term?.id" [routerLink]="'edit/' + schedule.id"><i class="fas fa-edit"></i>编辑</button>
+<!--        <button class="btn btn-sm btn-primary" [disabled]="schedule.term.id !== term?.id" [routerLink]="'edit/' + schedule.id"><i class="fas fa-edit"></i>编辑</button>-->
+        <button class="btn btn-sm btn-primary" [routerLink]="'edit/' + schedule.id"><i class="fas fa-edit"></i>编辑</button>
         <a class="btn btn-sm btn-danger" (click)="onDelete(schedule.id)"><i class="fas fa-trash"></i>删除</a>
       </td>
     </tr>
