--- a/schedule/src/app/schedule/table/table.component.html
+++ b/schedule/src/app/schedule/table/table.component.html
@@ -32,8 +32,8 @@
         <td  *ngFor="let bigLesson of bigLessons" class="col-sm-1 container-fluid">
           <div class="list-group">
             <button class="list-group-item" [ngClass]="{'list-group-item-primary': buttonActive(d, bigLesson)}" (click)="showModel(d, bigLesson)">
-              <h6>周{{day}}第{{bigLesson! + 1}}节</h6>
-              <span *ngIf="notEmptyWeeksTable[d][bigLesson].length">占用周: {{getNotEmptyWeeksOfTable(d, bigLesson)}}</span>
+<!--              <h6>周{{day}}第{{bigLesson! + 1}}节</h6>-->
+              <span *ngIf="notEmptyWeeksTable[d][bigLesson].length">周: {{getNotEmptyWeeksOfTable(d, bigLesson)}}</span>
             </button>
           </div>
         </td>
