--- a/schedule/src/app/timetable/timetable.component.html
+++ b/schedule/src/app/timetable/timetable.component.html
@@ -21,6 +21,7 @@
       </select>
     </div>
   </div>
+  <button (click)="excelExport()">导出excel</button>
 </div>
 <hr/>
 <h1 class="text-center mb-5 title-pt" style="margin-top: 90px" *ngIf="!term">
