--- a/schedule/src/app/schedule/schedule.component.html
+++ b/schedule/src/app/schedule/schedule.component.html
@@ -47,3 +47,15 @@
           [size]="pageData.size"
           [totalElements]="pageData.totalElements"
           (changePage)="onPageChange($event)"></app-page>
+
+<select class="js-example-basic-single" name="state">
+  <option value="AL">Alabama</option>
+  ...
+  <option value="WY">Wyoming</option>
+</select>
+
+<script>
+  $(document).ready(function() {
+    $('.js-example-basic-single').select2();
+  });
+</script>
