--- a/schedule/src/app/schedule/schedule.component.html
+++ b/schedule/src/app/schedule/schedule.component.html
@@ -3,10 +3,17 @@
   <div class="col-md-10">
     <form class="form-inline"  (submit)="onSubmit(queryForm)"  [formGroup]="queryForm">
       <input type="text" formControlName="courseName" class="form-control col-2 mr-3" placeholder="课程名称">
-      <input type="text" formControlName="termName" class="form-control col-2 mr-3" placeholder="学期名称">
       <input type="text" formControlName="clazzName" class="form-control col-2 mr-3" placeholder="班级名称">
       <input type="text" formControlName="teacherName" class="form-control col-2 mr-3" placeholder="教师名称">
-      <button type="submit" class="btn btn-info"><i class="fas fa-search"></i>查询</button>
+      <ng-select [items]="terms"
+                 bindLabel="name"
+                 bindValue="id"
+                 formControlName="termId"
+                 placeholder="学期名称"
+                 style="width: 10em"
+      >
+      </ng-select>
+      <button type="submit" class="ml-3 btn btn-info"><i class="fas fa-search"></i>查询</button>
     </form>
   </div>
   <div class="col-md-2">
@@ -15,7 +22,7 @@
 </div>
 <hr/>
 <app-size [size]="pageData.size" (changeSize)="onSizeChange($event)"></app-size>
-<span class="ml-5 font-weight-bold">当前学期:&nbsp;&nbsp;{{ term?.name}}</span><br>
+<span class="ml-5 font-weight-bold">激活学期:&nbsp;&nbsp;{{ term?.name}}</span><br>
 <table class="table table-striped mt-3">
   <thead class="table-primary">
     <tr class="info">
@@ -47,3 +54,4 @@
           [size]="pageData.size"
           [totalElements]="pageData.totalElements"
           (changePage)="onPageChange($event)"></app-page>
+
