--- a/schedule/src/app/clazz/edit/edit.component.html
+++ b/schedule/src/app/clazz/edit/edit.component.html
@@ -16,6 +16,15 @@
     </div>
   </div>
   <div class="form-group row">
+    <label for="studentNumber" class="col-sm-4 text-right col-form-label"><code>*</code>学生人数</label>
+    <div class="col-sm-8">
+      <input type="number" class="form-control col-sm-3" id="studentNumber" formControlName="studentNumber">
+      <small class="text-danger" *ngIf="formGroup.get('studentNumber')!.touched && formGroup.get('studentNumber')!.invalid ">
+        <span *ngIf="!formGroup.get('studentNumber')?.errors?.clazzNameUnique">格式不正确</span>
+      </small>
+    </div>
+  </div>
+  <div class="form-group row">
     <div class="offset-5">
       <a style="float: right" [routerLink]="'../../'" class="btn btn-primary">返回</a>
       <button style="float: right" class="btn btn-primary" [disabled]="formGroup.invalid">
